--- a/src/styles.css
+++ b/src/styles.css
@@ -8,11 +8,14 @@
   .loader {
     font-size: 30px;
     display: block;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: #ff3d00;
     letter-spacing: 2px;
     position: relative;
+        width: 100%; 
+        height: 10px; 
+        animation: animloader 2s linear infinite; 
   }
   .loader::after {
     content: 'Loading...';
@@ -24,16 +27,7 @@
     height: 100%;
     overflow: hidden;
     box-sizing: border-box;
-    animation: animloader 10s ease-in infinite;
-  }
-  
-  @keyframes animloader {
-    0% {
-      width: 0%;
-    }
-    100% {
-      width: 100%;
-    }
+    animation: animloader 2s ease-in infinite;
   }
   
   .is-hidden {
@@ -43,3 +37,29 @@
   .breed-select {
     margin-bottom: 20px;
   }
+
+  .name {
+    display: inline-block;
+    border: #0a0a0a 2px solid;
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .breed-info {
+    max-width: 400px;
+    border: #0a0a0a 2px solid;
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .temperament {
+    max-width: 400px;
+    border: #0a0a0a 2px solid;
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  
